@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191224"
-#define public MagickPackageReleaseDate "snapshot-20191224"
+#define public MagickPackageVersionAddendum ".020191225"
+#define public MagickPackageReleaseDate "snapshot-20191225"
